# Nibbler

./: .Draw.cpp.swp  .Draw.hpp.swp  .Food.cpp.swp  .Food.hpp.swp  .Game.cpp.swp  .Game.hpp.swp  .Makefile.swp  .Player.cpp.swp  .Player.hpp.swp  .gitignore  .main.cpp.swp  Apples.cpp  Apples.hpp  CMakeLists.txt  Draw.cpp  Draw.hpp  GUIInterface.hpp  Game.cpp  Game.hpp  Makefile  Player.cpp  Player.hpp  README.md  Snake  apples.cpp  apples.hpp  draw.cpp  game.cpp  game.hpp  gui.cpp  gui.hpp  install.sh  lib1  main.cpp  player.cpp  player.hpp  sdllib.cpp  sdllib.hpp  snake  todo  (+1 more)
Game/: CMakeLists.txt  apples.cpp  apples.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  main.cpp  player.cpp  player.hpp
Ncurses/: Makefile  a.out  factory.hpp  factory.hpp.gch  main.cpp  test.cpp
allegrolib/: .allegrolib.cpp.swp  Makefile  allegrolib.cpp  allegrolib.hpp  main.cpp
ncurseslib/: .ncurseslib.cpp.swp  CMakeLists.txt  Makefile  main.cpp  ncurseslib.cpp  ncurseslib.hpp  test.cpp
sdllib/: .sdllib.cpp.swp  CMakeLists.txt  ILib.cpp  ILib.hpp  Makefile  main.cpp  sdllib.cpp  sdllib.hpp  to_do
sdllib/name.dSYM/Contents/Resources/DWARF/: name
sfmllib/: CMakeLists.txt  Makefile  main.cpp  sfmllib.cpp  sfmllib.hpp
sfmllib/cmake_modules/: FindSFML.cmake
